# I-V-Curve-Filter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: airflow.cfg
dags/: IV_curve_filter_dag.py
notebooks/: filtrado..ipynb  parametros_ajuste_nelder.csv
src/queries/: contar_filas.sql  crear_tablas.sql  curvas_restantes.sql  guardar_parametros_ajuste.sql  guardar_parametros_promediados.sql  guardar_parametros_solares.sql  obtener_analizadores.sql  obtener_curvas_con_start_id.sql  obtener_curvas_sin_start_id.sql  obtener_id_path.sql  ultima_curva_procesada.sql
src/scripts/: ajuste_curvasIV_modelo_diodo.py  credential_handler.py  curva_processor.py  data.py  database_handler.py  main.py  parametros_promediados.py  parametros_solar.py  sql_handler.py
test/: test_main.py
